--- a/html/index-zakaz.html
+++ b/html/index-zakaz.html
@@ -8,40 +8,43 @@
 <body>
     <link rel="stylesheet" href="/css/style-zakaz.css">
     <div class="header">
-        <form action="" method="get">
-            <div class="header-line2">
-                <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
-                <a href="index-head.html" class="header-line1-p1">Chipi-Chipi</a>
-                <input class='header-line1-input' type="text" placeholder="Поиск по сайту..." name="header-line1-poisk">
-                <button class='header-line1-btn1' type="submit">
-                    <img class="header-line1-img2" src="/фото/search_magnifier_icon_145939.png" alt="Лупа">
-                </button>
-                <a href="index-basket.html">
-                    <img class = 'header-line1-img3' src="/фото/ShoppingCartSimple.png" alt="image">
-                </a>
-                <a href="#">
-                    <img class='header-line1-img4' src="/фото/Heart.png" alt="image">
-                </a>
-                <a href="index-account-vhod.html">
-                    <img class="header-line1-img4" src="/фото/User.png" alt="imagr">
-                </a>
-            </div>
-        </form>
+        <div class="header-line2">
+            <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
+            <a href="index-head.html" class="header-line1-p1">Chipi-Chipi</a>
+            <input class='header-line1-input' type="text" placeholder="Поиск по сайту..." name="header-line1-poisk">
+            <button class='header-line1-btn1' type="submit">
+                <img class="header-line1-img2" src="/фото/search_magnifier_icon_145939.png" alt="Лупа">
+            </button>
+            <a href="index-basket.html">
+                <img class = 'header-line1-img3' src="/фото/ShoppingCartSimple.png" alt="image">
+            </a>
+            <a href="#">
+                <img class='header-line1-img4' src="/фото/Heart.png" alt="image">
+            </a>
+            <a href="index-account-vhod.html">
+                <img class="header-line1-img4" src="/фото/User.png" alt="imagr">
+            </a>
+        </div>
         <div class="header-line3">
-            <select class='header-line3-select' name="category">
-                <option class="header-line3-option1" value="1">Все категории</option>
-                <option class="header-line3-option" value="2">Электроника</option>
-                <option class="header-line3-option" value="3">Одежда</option>
-                <option class="header-line3-option" value="4">Бытовая техника</option>
-                <option class="header-line3-option" value="5">Дом и сад</option>
-                <option class="header-line3-option" value="6">Аптека</option>
-                <option class="header-line3-option" value="7">Товары для животных</option>
-                <option class="header-line3-option" value="8">Аксессуары</option>
-                <option class="header-line3-option" value="9">Автотовары</option>
-                <option class="header-line3-option" value="10">Мебель</option>
-                <option class="header-line3-option" value="11">Красота и здоровье</option>
-                <option class="header-line3-option" value="12">Продукты</option>
-            </select>
+            <div class="filter">
+                <button class="header-line3-new">
+                    <p class="header-line3-p">Все категории</p>
+                    <img class="header-line3-new-img" src="/фото1/Vector.png" alt="">
+                </button>
+                <div class="category">
+                    <a href="/html/index-filter.html"><p class="category-p">Электроника</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Одежда</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Бытовая техника</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Дом и сад</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Аптека</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Товары для животных</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Аксессуары</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Автотовары</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Мебель</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Красота и здоровье</p></a>
+                    <a href="/html/index-filter.html"><p class="category-p">Продукты</p></a>
+                </div>
+            </div>
             <img class='header-line3-img1' src="/фото/MapPinLine.png" alt="image">
             <a class="header-line3-a1" href="index-zakaz.html">Отследить заказ</a>
             <img class='header-line3-img2' src="/фото/Vector1.png" alt="image">
