--- a/html/index-filter.html
+++ b/html/index-filter.html
@@ -48,9 +48,9 @@
             <img class='header-line3-img1' src="/фото/MapPinLine.png" alt="image">
             <a class="header-line3-a1" href="index-zakaz.html">Отследить заказ</a>
             <img class='header-line3-img2' src="/фото/Vector1.png" alt="image">
-            <a class="header-line3-a2" href="index-podderzhka.html">Поддержка</a>
+            <a class="header-line3-a1" href="index-podderzhka.html">Поддержка</a>
             <img class='header-line3-img3' src="/фото/Info.png" alt="image">
-            <a class="header-line3-a3" href="index-help.html">Нужна помощь</a>
+            <a class="header-line3-a1" href="index-help.html">Нужна помощь</a>
             <img class='header-line3-img4' src="/фото/PhoneCall.png" alt="image">
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
@@ -164,8 +164,10 @@
                     <img class="right-filter-line11-img" src="/фото1/X.png" alt="">
                     <p class="right-filter-line11-p1">Электроника</p>
                     <img class="right-filter-line11-img" src="/фото1/X.png" alt="">
-                    <p class="right-filter-line11-p2">6</p>
-                    <p class="right-filter-line11-p3">Результатов найдено</p>
+                    <div class="rfl">
+                        <p class="right-filter-line11-p2">6</p>
+                        <p class="right-filter-line11-p3">Результатов найдено</p>
+                    </div>
                 </div>
             </div>                
             <div class="tovary">
