--- a/html/index-head.html
+++ b/html/index-head.html
@@ -48,14 +48,14 @@
             <img class='header-line3-img1' src="/фото/MapPinLine.png" alt="image">
             <a class="header-line3-a1" href="index-zakaz.html">Отследить заказ</a>
             <img class='header-line3-img2' src="/фото/Vector1.png" alt="image">
-            <a class="header-line3-a2" href="index-podderzhka.html">Поддержка</a>
+            <a class="header-line3-a1" href="index-podderzhka.html">Поддержка</a>
             <img class='header-line3-img3' src="/фото/Info.png" alt="image">
-            <a class="header-line3-a3" href="index-help.html">Нужна помощь</a>
+            <a class="header-line3-a1" href="index-help.html">Нужна помощь</a>
             <img class='header-line3-img4' src="/фото/PhoneCall.png" alt="image">
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
     </div>
-    <div class="card" id="carta">
+    <!-- <div class="card" id="carta">
         <img class='card-img1' src="/фото/Line 39.png" alt="line">
         <div class="card-btnimg1">
             <button class="card-btn1">
@@ -77,7 +77,7 @@
             </button>
         </div>
         <img class='card-img5' src="/фото/Line 36.png" alt="line">
-    </div>
+    </div> -->
     <div class="tovary">
         <div class="tovar">
             <a href="#">
@@ -462,7 +462,7 @@
             </div>
         </div>
     </div>
-    <div class="cards">
+    <!-- <div class="cards">
         <div class="first-card">
             <p class="cards-p1">Популярное</p>
             <p class="cards-p2">ASUS ROG STRIX<br>SCAR 2</p>
@@ -486,7 +486,7 @@
         <div class="fourth-card">
             <img class="cards-img3" src="/фото/image 27.png" alt="">
         </div>
-    </div>
+    </div> -->
     <div class="tovary">
         <div class="tovar">
             <a href="#">
@@ -897,9 +897,9 @@
             <img class='buttons-img2' src="/фото/arrgreenright.png" alt="">
         </button>
     </div>
-    <div class="reklama">
+    <!-- <div class="reklama">
         <img class='reklama-img' src="/фото/image 311.png" alt="">
-    </div>
+    </div> -->
     <div class="rassilka">
         <p class="rassilka-p1">Подпишитесь на нас для новостей</p>
     </div>
