--- a/html/index-filter.html
+++ b/html/index-filter.html
@@ -67,12 +67,12 @@
                 </select>
             </div>
             <p class="filter-p">КАТЕГОРИИ</p>
-            <div class="left-filter-1">
+            <!-- <div class="left-filter-1">
                 <input type="radio" name="cat" id="1" class="real-radio">
                 <span class="custom-radio"></span>
                 <label for="1">Электроника</label>
             </div>
-            <!-- <div class="left-filter-electronika">
+            <div class="left-filter-electronika">
                 <div class="left-filter-2">
                     <input type="radio" name="electronika" id="electronika1" class="real-radio">
                     <span class="custom-radio"></span>
@@ -83,7 +83,7 @@
                     <span class="custom-radio"></span>
                     <label for="electronika2">Часы</label>
                 </div>
-            </div> -->
+            </div>
             <div class="left-filter-1">
                 <input type="radio" name="cat" id="2" class="real-radio">
                 <span class="custom-radio"></span>
@@ -133,6 +133,19 @@
                 <input type="radio" name="cat" id="11" class="real-radio">
                 <span class="custom-radio"></span>
                 <label for="11">Продукты</label>
+            </div> -->
+            <div class="filter-new">
+                <a href="#"><p class="filter-new-p">Электроника</p></a>
+                <a href="#"><p class="filter-new-p">Одежда</p></a>
+                <a href="#"><p class="filter-new-p">Бытовая техника</p></a>
+                <a href="#"><p class="filter-new-p">Дом и сад</p></a>
+                <a href="#"><p class="filter-new-p">Аптека</p></a>
+                <a href="#"><p class="filter-new-p">Товары для животных</p></a>
+                <a href="#"><p class="filter-new-p">Аксессуары</p></a>
+                <a href="#"><p class="filter-new-p">Автотовары</p></a>
+                <a href="#"><p class="filter-new-p">Мебель</p></a>
+                <a href="#"><p class="filter-new-p">Красота и здоровье</p></a>
+                <a href="#"><p class="filter-new-p">Продукты</p></a>
             </div>
             <p class="poloska"></p>
             <div class="price">
