--- a/html/index-zakaz.html
+++ b/html/index-zakaz.html
@@ -55,10 +55,9 @@
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
     </div>
-        <hr>
         <div class="zakaz">
             <p class="zakaz-p1">Отследить доставку</p>
-            <p class="zakaz-p2">Чтобы отследить свой заказ, введите идентификатор заказа в поле ввода ниже и нажмите<br>кнопку «Отследить заказ». Это было указано вам в квитанции и в электронном письме с<br> подтверждением, которое вы должны были получить.</p>
+            <p class="zakaz-p2">Чтобы отследить свой заказ, введите идентификатор заказа в поле ввода ниже и нажмите кнопку «Отследить заказ». Это было указано вам в квитанции и в электронном письме с подтверждением, которое вы должны были получить.</p>
             <div class="zakaz-id-adres">
                 <p class="zakaz-id">ID трекер</p>
                 <p class="zakaz-adres">Email</p>
@@ -71,25 +70,21 @@
                 <img class="zakaz-img1" src="/фото/Info.png" alt="info">
                 <p class="zakaz-p3">Идентификатор заказа, который мы отправили вам на<br> ваш адрес электронной почты.</p>
             </div>
-            <form action="" method="get">
-                <button class="zakaz-btn1">
-                    <p class="zakaz-p4">ОТСЛЕДИТЬ ЗАКАЗ</p>
-                    <img class="zakaz-img2" src="/фото/ArrowRight.png" alt="arrow">
-                </button>
-            </form>
+            <button class="zakaz-btn1">
+                <p class="zakaz-p4">ОТСЛЕДИТЬ ЗАКАЗ</p>
+                <img class="zakaz-img2" src="/фото/ArrowRight.png" alt="arrow">
+            </button>
         </div>
-        <div class="rassilka">
+        <!-- <div class="rassilka">
             <p class="rassilka-p1">Подпишитесь на нас для новостей</p>
         </div>
-        <form action="#" method="get">
-            <div class="rassilka1">
-                <input class='rassilka1-input' type="text" placeholder="Email адрес">
-                <button class="rassilka1-btn">
-                    <p class="rassilka1-p1">Подписаться</p>
-                    <img class="rassilka-img1" src="/фото/ArrowRight.png" alt="">
-                </button>
-            </div>
-        </form>
+        <div class="rassilka1">
+            <input class='rassilka1-input' type="text" placeholder="Email адрес">
+            <button class="rassilka1-btn">
+                <p class="rassilka1-p1">Подписаться</p>
+                <img class="rassilka-img1" src="/фото/ArrowRight.png" alt="">
+            </button>
+        </div> -->
         <div class="bottom">
             <div class="bottom1">
                 <div class="bottom1-line1">
