--- a/html/index-podderzhka.html
+++ b/html/index-podderzhka.html
@@ -64,7 +64,7 @@
                 <input class="vopros1-input" type="text" placeholder="Введите ваш вопрос">
                 <div class="vopros111">
                     <button class='vopros1-btn' type="submit">
-                        <p class="vopros1-p3"> ПОДТВЕРДИТЬ</p>
+                        <p class="vopros1-p3">ПОДТВЕРДИТЬ</p>
                     </button>
                 </div>
             </div>
@@ -78,56 +78,64 @@
         <p class="vopros3-p1">Как мы можем помочь вам сегодня?</p>
     </div>
     <div class="vopros4">
-        <a href="/index-zakaz.html">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/Truck1.svg" alt="">
-                <p class="vopros4-p1">Отследить заказ</p>
-            </div>
-        </a>
-        <a href="index-parol.html">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/LockOpen.svg" alt="">
-                <p class="vopros4-p1">Восстановить пароль</p>
-            </div>
-        </a>
-        <a href="#">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/CreditCard.svg" alt="">
-                <p class="vopros4-p1">Варианты оплаты</p>
-            </div>
-        </a>
-        <a href="index-account-vhod.html">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/User.svg" alt="">
-                <p class="vopros4-p1">Пользователь & аккаунт</p>
-            </div>
-        </a>
+        <div class="perenos">
+            <a href="/html/index-zakaz.html">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/Truck1.svg" alt="">
+                    <p class="vopros4-p1">Отследить заказ</p>
+                </div>
+            </a>
+            <a href="/html/index-parol.html">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/LockOpen.svg" alt="">
+                    <p class="vopros4-p1">Восстановить пароль</p>
+                </div>
+            </a>
+        </div>
+        <div class="perenos">
+            <a href="#">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/CreditCard.svg" alt="">
+                    <p class="vopros4-p1">Варианты оплаты</p>
+                </div>
+            </a>
+            <a href="/html/index-account.html">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/User.svg" alt="">
+                    <p class="vopros4-p1">Пользователь & аккаунт</p>
+                </div>
+            </a>
+        </div>
     </div>
     <div class="vopros5">
-        <a href="#">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/Stack.svg" alt="">
-                <p class="vopros4-p1">Список желаний & сравнение</p>
-            </div>
-        </a>
-        <a href="#">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/Notepad.svg" alt="">
-                <p class="vopros4-p1">Доставка</p>
-            </div>
-        </a>
-        <a href="index-basket.html">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/CreditCard.svg" alt="">
-                <p class="vopros4-p1">Корзина & кошелёк</p>
-            </div>
-        </a>
-        <a href="#">
-            <div class="vopros4-1">
-                <img class="vopros4-img1" src="/фото/Storefront.svg" alt="">
-                <p class="vopros4-p1">Продавать на Chipi-Chipi</p>
-            </div>
-        </a>
+        <div class="perenos">
+            <a href="/html/index-favorite.html">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/Stack.svg" alt="">
+                    <p class="vopros4-p1">Список желаний & сравнение</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/Notepad.svg" alt="">
+                    <p class="vopros4-p1">Доставка</p>
+                </div>
+            </a>
+        </div>
+        <div class="perenos">
+            <a href="/html/index-basket.html">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/CreditCard.svg" alt="">
+                    <p class="vopros4-p1">Корзина & кошелёк</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="vopros4-1">
+                    <img class="vopros4-img1" src="/фото/Storefront.svg" alt="">
+                    <p class="vopros4-p1">Продавать на Chipi-Chipi</p>
+                </div>
+            </a>
+        </div>
     </div>
     <div class="hr2"></div>
     <div class="vopros6">
@@ -186,14 +194,12 @@
                 <div class="vopros8-2-12">
                     <p class="vopros8-2-12-p1">Позвоните нам</p>
                     <p class="vopros8-2-12-p2">Номера нет</p>
-                    <form action="#" method="get">
-                        <div class="vopros8-2-123-btn">
-                            <button class="vopros8-2-12-btn">
-                                <p class="vopros8-2-12-btn-p1">ПОЗВОНИТЬ НАМ</p>
-                                <img src="/фото/ArrowRight.png" alt="">
-                            </button>
-                        </div>
-                    </form>
+                    <div class="vopros8-2-123-btn">
+                        <button class="vopros8-2-12-btn">
+                            <p class="vopros8-2-12-btn-p1">ПОЗВОНИТЬ НАМ</p>
+                            <img src="/фото/ArrowRight.png" alt="">
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="vopros8-2-2">
@@ -203,14 +209,12 @@
                 <div class="vopros8-2-12">
                     <p class="vopros8-2-12-p1">Напишите нам</p>
                     <p class="vopros8-2-12-p2">Почты нет</p>
-                    <form action="#" method="get">
-                        <div class="vopros8-2-123-btn">
-                            <button class="vopros8-2-12-btn">
-                                <p class="vopros8-2-12-btn-p1">НАПИСАТЬ НАМ</p>
-                                <img src="/фото/ArrowRight.png" alt="">
-                            </button>
-                        </div>
-                    </form>
+                    <div class="vopros8-2-123-btn">
+                        <button class="vopros8-2-12-btn">
+                            <p class="vopros8-2-12-btn-p1">НАПИСАТЬ НАМ</p>
+                            <img src="/фото/ArrowRight.png" alt="">
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
