--- a/html/index-basket.html
+++ b/html/index-basket.html
@@ -79,7 +79,7 @@
                         <button class="kolvo-btn1">
                             <img class="kolvo-img1" src="/фото/Minus1.svg" alt="">
                         </button>
-                        <p class="kolvo-p">01</p>
+                        <p class="kolvo-p">1</p>
                         <button class="kolvo-btn2">
                             <img class="kolvo-img2" src="/фото/Plus.svg" alt="">
                         </button>
@@ -103,7 +103,7 @@
                         <button class="kolvo-btn1">
                             <img class="kolvo-img1" src="/фото/Minus1.svg" alt="">
                         </button>
-                        <p class="kolvo-p">01</p>
+                        <p class="kolvo-p">1</p>
                         <button class="kolvo-btn2">
                             <img class="kolvo-img2" src="/фото/Plus.svg" alt="">
                         </button>
@@ -112,6 +112,9 @@
                         <p class="tovar1-p2">&&&</p>
                         <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
                     </div>
+                </div>
+                <div class="tovara-net">
+                    <p class="tovara-net-p">Корзина пуста</p>
                 </div>
             </div>
             <div class="knopki">
