--- a/html/index-basket.html
+++ b/html/index-basket.html
@@ -152,10 +152,12 @@
                     </div>
                 </div>
                 <div class="cart-right-12-btn">
-                    <button class="cart-right-12-btn1">
-                        <p class="cart-right-12-btn-p">ПЕРЕЙТИ К ОПЛАТЕ</p>
-                        <img class="cart-right-12-btn-img" src="/фото/ArrowRight.png" alt="">
-                    </button>
+                    <a href="/html/index-oplata.html">
+                        <button class="cart-right-12-btn1">
+                            <p class="cart-right-12-btn-p">ПЕРЕЙТИ К ОПЛАТЕ</p>
+                            <img class="cart-right-12-btn-img" src="/фото/ArrowRight.png" alt="">
+                        </button>
+                    </a>
                 </div>
             </div>
             <div class="cart-right-2">
