--- a/html/index-pay.html
+++ b/html/index-pay.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="/css/style-oplata.css">
+    <link rel="stylesheet" href="/css/style-pay.css">
     <div class="header">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
@@ -55,115 +55,40 @@
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
     </div>
-    <div class="oplata">
-        <div class="info">
-            <p class="info-p">Платежная информация</p>
-            <div class="info-name">
-                <div class="first-name">
-                    <p class="first-name-p">Имя</p>
-                    <input class="first-name-input" type="text">
-                </div>
-                <div class="last-name">
-                    <p class="last-name-p">Фамилия</p>
-                    <input class="last-name-input" type="text">
-                </div>
-                <div class="middle-name">
-                    <p class="middle-name-p">Отчество</p>
-                    <input class="middle-name-input" type="text">
-                </div>
+    <div class="carta">
+        <p class="nomer-p">Номер карты</p>
+        <input id="cardNumber" class="nomer" type="text" placeholder="1234 5678 9012 3456">
+        <div class="dannie">
+            <div class="data">
+                <p class="data-p">Месяц/год</p>
+                <input class="data-input" id="cardData" type="text" placeholder="12/24">
             </div>
-            <div class="info-adress">
-                <p class="adress-p">Адрес</p>
-                <input class="adress-input" type="text">
-            </div>
-            <div class="info-mesto">
-                <div class="land">
-                    <p class="land-p">Страна</p>
-                    <input class="land-input" type="text">
-                </div>
-                <div class="region">
-                    <p class="region-p">Регион</p>
-                    <input class="region-input" type="text">
-                </div>
-                <div class="city">
-                    <p class="city-p">Город</p>
-                    <input class="city-input" type="text">
-                </div>
-            </div>
-            <div class="private-info">
-                <div class="email">
-                    <p class="email-p">Email</p>
-                    <input class="email-input" type="email">
-                </div>
-                <div class="phone">
-                    <p class="phone-p">Номер телефона</p>
-                    <input class="phone-input" type="text">
-                </div>
-                <div class="index">
-                    <p class="index-p">Индекс</p>
-                    <input class="index-input" type="number">
-                </div>
-            </div>
-            <div class="save">
-                <button class="save-btn">
-                    <p class="save-p">СОХРАНИТЬ</p>
-                </button>
+            <div class="cvv">
+                <p class="cvv-p">CVC</p>
+                <input class="cvv-input" id='cardCvv' type="number" placeholder="156">
             </div>
         </div>
-        <div class="cart">
-            <p class="cart-p">Корзина</p>
-            <div class="tovar">
-                <img class="tovar-img" src="/фото/Image10.svg" alt="">
-                <div class="tovar-p">
-                    <p class="tovar-p1">4K UHD LED Smart TV c домашней аудисистемой</p>
-                    <div class="tovar-price">
-                        <p class="tovar-price-p1">1</p>
-                        <p class="tovar-price-p2">x</p>
-                        <p class="tovar-price-p3">37123</p>
-                        <img class="tovar-price-img" src="/фото1/icons8-рубль-24.png" alt="">
-                    </div>
+    </div>
+    <div class="cart">
+        <div class="cart-right">
+            <div class="cart-right-12">
+                <p class="cart-right-12-p1">Количество</p>
+                <p class="cart-right-12-p3">2</p>
+            </div>
+            <div class="cart-right-12">
+                <p class="cart-right-12-p4">Итого</p>
+                <div class="cart-right-12-p2-img">
+                    <p class="cart-right-12-p2">63952</p>
+                    <img class="cart-right-12-img" src="/фото/icons8-рубль-32.png" alt="">
                 </div>
             </div>
-            <div class="tovar">
-                <img class="tovar-img" src="/фото/Image2.svg" alt="">
-                <div class="tovar-p">
-                    <p class="tovar-p1">Беспроводные наушники с микрофоном Sony WH-1000XM4 Black</p>
-                    <div class="tovar-price">
-                        <p class="tovar-price-p1">1</p>
-                        <p class="tovar-price-p2">x</p>
-                        <p class="tovar-price-p3">26829</p>
-                        <img class="tovar-price-img" src="/фото1/icons8-рубль-24.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="cart-right">
-                <div class="cart-right-12">
-                    <p class="cart-right-12-p1">Итоговая цена</p>
-                    <div class="cart-right-12-p2-img">
-                        <p class="cart-right-12-p2">63952</p>
-                        <img class="cart-right-12-img" src="/фото/icons8-рубль-32.png" alt="">
-                    </div>
-                </div>
-                <div class="cart-right-12">
-                    <p class="cart-right-12-p1">Доставка</p>
-                    <p class="cart-right-12-p3">Бесплатно</p>
-                </div>
-                <p class="poloska"></p>
-                <div class="cart-right-12">
-                    <p class="cart-right-12-p4">Итого</p>
-                    <div class="cart-right-12-p2-img">
-                        <p class="cart-right-12-p2">63952</p>
-                        <img class="cart-right-12-img" src="/фото/icons8-рубль-32.png" alt="">
-                    </div>
-                </div>
-                <div class="cart-right-12-btn">
-                    <a href="/html/index-pay.html">
-                        <button class="cart-right-12-btn1">
-                            <p class="cart-right-12-btn-p">ОПЛАТИТЬ</p>
-                            <img class="cart-right-12-btn-img" src="/фото/ArrowRight.png" alt="">
-                        </button>
-                    </a>
-                </div>
+            <div class="cart-right-12-btn">
+                <a href="/html/index-pay.html">
+                    <button class="cart-right-12-btn1">
+                        <p class="cart-right-12-btn-p">ОПЛАТИТЬ</p>
+                        <img class="cart-right-12-btn-img" src="/фото/ArrowRight.png" alt="">
+                    </button>
+                </a>
             </div>
         </div>
     </div>
@@ -232,6 +157,6 @@
             </a>
         </div>
     </div>
-    <script src="/js/oplata.js"></script>
+    <script src="/js/pay.js"></script>
 </body>
 </html>
