--- a/html/index-account.html
+++ b/html/index-account.html
@@ -66,7 +66,7 @@
             </div>
             <div class="panel-2">
                 <img class="panel-2-img" src="/фото/Storefront1.svg" alt="2">
-                <a href="#"><p class="panel-2-p">История заказов</p></a>
+                <a href="/html/index-history.html"><p class="panel-2-p">История заказов</p></a>
             </div>
             <div class="panel-2">
                 <img class="panel-2-img" src="/фото/MapPinLine1.svg" alt="3">
