--- a/html/index-history.html
+++ b/html/index-history.html
@@ -55,6 +55,223 @@
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
     </div>
+    <div class="history">
+        <div class="panel">
+            <div class="panel-1">
+                <img class="panel-1-img" src="/фото/Storefront1.svg" alt="1">
+                <a href="#"><p class="panel-1-p">История заказов</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото1/icons8-слои-20.png" alt="2">
+                <a href="#"><p class="panel-2-p">Аккаунт</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото/MapPinLine1.svg" alt="3">
+                <a href="index-zakaz.html"><p class="panel-2-p">Отследить заказ</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото/ShoppingCartSimple1.svg" alt="4">
+                <a href="index-basket.html"><p class="panel-2-p">Корзина</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото/Heart1.svg" alt="5">
+                <a href="index-favorite.html"><p class="panel-2-p">Список желаний</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото/ArrowsCounterClockwise1.svg" alt="6">
+                <a href="#"><p class="panel-2-p">Сравнить</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото/Notebook1.svg" alt="7">
+                <a href="#"><p class="panel-2-p">Карты и адреса</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото/Gear1.svg" alt="8">
+                <a href="#"><p class="panel-2-p">Настройки</p></a>
+            </div>
+            <div class="panel-2">
+                <img class="panel-2-img" src="/фото/SignOut1.svg" alt="9">
+                <a href="#"><p class="panel-2-p">Выйти из аккаунта</p></a>
+            </div>
+        </div>
+        <div class="zakaz">
+            <div class="zakaz1">
+                <button class="zakaz1-btn">
+                    <img class="zakaz1-img" src="/фото1/ArrowLeft.svg" alt="">
+                    <p class="zakaz1-p">ИСТОРИИ ЗАКАЗОВ</p>
+                </button>
+            </div>
+            <div class="zakaz2">
+                <div class="zakaz2-p">
+                    <p class="zakaz2-p1">В пути</p>
+                    <div class="zakaz21">
+                        <p class="zakaz21-p">2 товара</p>
+                        <p class="zakaz21-p1">Заказ от 2024, 11 февраля, 14:55</p>
+                    </div>
+                </div>
+                <div class="zakaz22">
+                    <p class="zakaz22-p">41223</p>
+                    <img class="zakaz22-img" src="/фото1/icons8-рубль-синий.png" alt="">
+                </div>
+            </div>
+            <div class="poloska">
+                <p class="poloska-p"></p>
+            </div>
+            <p class="zakaz-p">История заказа</p>
+            <div class="zakaz3">
+                <div class="zakaz3-fon">
+                    <img class="zakaz3-img" src="/фото1/Notebook1.svg" alt="">
+                </div>
+                <div class="zakaz3-p">
+                    <p class="zakaz3-p1">Ваш заказ на подтверждении</p>
+                    <p class="zakaz3-p2">11 Февраля, 2023г, 14:56</p>
+                </div>
+            </div>
+            <div class="zakaz3">
+                <div class="zakaz3-fon">
+                    <img class="zakaz3-img" src="/фото1/CheckCircle.svg" alt="">
+                </div>
+                <div class="zakaz3-p">
+                    <p class="zakaz3-p1">Ваш заказ успешно подтвержден</p>
+                    <p class="zakaz3-p2">11 Февраля, 2023г, 15:03</p>
+                </div>
+            </div>
+            <div class="zakaz3">
+                <div class="zakaz3-fon">
+                    <img class="zakaz3-img" src="/фото1/Package.svg" alt="">
+                </div>
+                <div class="zakaz3-p">
+                    <p class="zakaz3-p1">Ваш заказ упакован</p>
+                    <p class="zakaz3-p2">12 Февраля, 2023г, 11:11</p>
+                </div>
+            </div>
+            <div class="zakaz3">
+                <div class="zakaz3-fon">
+                    <img class="zakaz3-img" src="/фото1/Truck.svg" alt="">
+                </div>
+                <div class="zakaz3-p">
+                    <p class="zakaz3-p1">Ваш заказ в пути</p>
+                    <p class="zakaz3-p2">12 Февраля, 2023г, 17:46</p>
+                </div>
+            </div>
+            <div class="zakaz3">
+                <div class="zakaz3-fon">
+                    <img class="zakaz3-img" src="/фото1/MapPinLine.svg" alt="">
+                </div>
+                <div class="zakaz3-p">
+                    <p class="zakaz3-p1">Ваш заказ прибыл</p>
+                    <p class="zakaz3-p2">13 Февраля, 2023г, 9:04</p>
+                </div>
+            </div>
+            <div class="zakaz3">
+                <div class="zakaz3-fon">
+                    <img class="zakaz3-img" src="/фото1/Notepad.svg" alt="">
+                </div>
+                <div class="zakaz3-p">
+                    <p class="zakaz3-p1">Заказ получен</p>
+                    <p class="zakaz3-p2">13 Февраля, 2023г, 20:13</p>
+                </div>
+            </div>
+            <div class="poloska">
+                <p class="poloska-p"></p>
+            </div>
+            <p class="zakaz-p1">Товары</p>
+            <div class="cart">
+                <div class="cart-up">
+                    <p class="cart-up-p">ТОВАРЫ</p>
+                </div>
+                <div class="cart-in">
+                    <img class="cart-in-img" src="/фото1/Image.svg" alt="">
+                    <div class="cart-in1">
+                        <p class="cart-in1-p">Телефон</p>
+                        <p class="cart-in1-p1">Samsung Смартфон Galaxy A15 8/256 ГБ, темно-синий</p>
+                    </div>
+                    <div class="cart-in2">
+                        <p class="cart-in2-p">1x</p>
+                        <p class="cart-in2-p">19239</p>
+                        <img class="cart-in2-img" src="/фото1/icons8-рубль-серый.png" alt="">
+                    </div>
+                </div>
+                <div class="cart-in">
+                    <img class="cart-in-img" src="/фото1/Image.svg" alt="">
+                    <div class="cart-in1">
+                        <p class="cart-in1-p">Телефон</p>
+                        <p class="cart-in1-p1">Samsung Смартфон Galaxy A15 8/256 ГБ, темно-синий</p>
+                    </div>
+                    <div class="cart-in2">
+                        <p class="cart-in2-p">1x</p>
+                        <p class="cart-in2-p">19239</p>
+                        <img class="cart-in2-img" src="/фото1/icons8-рубль-серый.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="bottom1">
+            <div class="bottom1-line1">
+                <img class="bottom1-img1" src="/фото/Union1.png" alt="">
+                <a href="index-head.html">
+                    <p class="bottom1-p1">Chipi-Chipi</p>
+                </a>
+            </div>
+            <p class="bottom1-p2">Поддержка клиентов:</p>
+            <a href="#">
+                <p class="bottom1-p3">Номера нет</p>
+            </a>
+            <a href="#">
+                <p class="bottom1-p3">Адреса нет</p>
+            </a>
+            <a href="#">
+                <p class="bottom1-p3">Почты нет</p>
+            </a>
+        </div>
+        <div class="bottom2">
+            <p class="bottom2-p1">Категории</p>
+            <a href="#">
+                <p class="bottom2-p2">Компьютеры и ноутбуки</p>
+            </a>
+            <a href="#">
+                <p class="bottom2-p2">Телефоны</p>
+            </a>
+            <a href="#">
+                <p class="bottom2-p2">Наушники</p>
+            </a>
+            <a href="#">
+                <p class="bottom2-p2">Камера и фото</p>
+            </a>
+            <a href="#">
+                <p class="bottom2-p2">TV и дом</p>
+            </a>
+            <a href="#">
+                <div class="bottom2-vse-tovary">
+                    <p class="bottom2-p7">Посмотреть все товары</p>
+                    <img class="bottom2-img1" src="/фото/ArrowRight3.png" alt="">
+                </div>
+            </a>
+        </div>
+        <div class="bottom2">
+            <p class="bottom2-p1">Полезные ссылки</p>
+            <a href="#">
+                <p class="bottom2-p2">Товары магазина</p>
+            </a>
+            <a href="index-basket.html">
+                <p class="bottom2-p2">Корзина</p>
+            </a>
+            <a href="#">
+                <p class="bottom2-p2">Список желаний</p>
+            </a>
+            <a href="#">
+                <p class="bottom2-p2">Сравнить</p>
+            </a>
+            <a href="index-zakaz.html">
+                <p class="bottom2-p2">Отследить доставку</p>
+            </a>
+            <a href="index-podderzhka.html">
+                <p class="bottom2-p2">Пользовательская поддержка</p>
+            </a>
+        </div>
+    </div>
     <script src="/js/history.js"></script>
 </body>
 </html>
