--- a/html/index-podderzhka.html
+++ b/html/index-podderzhka.html
@@ -129,7 +129,7 @@
                     <p class="vopros4-p1">Корзина & кошелёк</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="/html/Index-uppload-tovar.html">
                 <div class="vopros4-1">
                     <img class="vopros4-img1" src="/фото/Storefront.svg" alt="">
                     <p class="vopros4-p1">Продавать на Chipi-Chipi</p>
