--- a/html/index-basket.html
+++ b/html/index-basket.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <link rel="stylesheet" href="/css/style-basket.css">
+    <div class="cart-icon">
+        <p class="cart-icon-p">5</p>
+    </div>
     <div class="header-line2">
         <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
         <a  href="index-head.html" class="header-line1-p1">Chipi-Chipi</a>
