--- a/html/index-head.html
+++ b/html/index-head.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <link rel="stylesheet" href="/css/style-head.css">
+    <div class="cart-icon">
+        <p class="cart-icon-p">5</p>
+    </div>
     <div class="header">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
@@ -909,7 +912,7 @@
             <p class="rassilka1-p1">Подписаться</p>
             <img class="rassilka-img1" src="/фото/ArrowRight.png" alt="">
         </button>
-    </div>
+    </div>    
     <div class="bottom">
         <div class="bottom1">
             <div class="bottom1-line1">
