--- a/html/index-filter.html
+++ b/html/index-filter.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <link rel="stylesheet" href="/css/style-filter.css">
+    <div class="cart-icon">
+        <p class="cart-icon-p">5</p>
+    </div>
     <div class="header">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
